--- a/app/src/main/res/layout/fragment_new_user.xml
+++ b/app/src/main/res/layout/fragment_new_user.xml
@@ -3,41 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeamListFragment">
+    tools:context=".NewUserFragment">
 
-    <TextView
-        android:id="@+id/text_view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/our_team"
-        android:textSize="32sp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/team_page_recycler_view"
+    <EditText
+        android:id="@+id/user_name_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/text_view_title"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:hint="@string/user_name"
+        android:padding="10dp" />
+
+    <EditText
+        android:id="@+id/job_title_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_name_edit_text"
+        android:hint="@string/job_title"
         android:padding="10dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_new_user"
+        android:id="@+id/btn_cancel_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="30dp"
-        android:text="@string/add_new_user" />
+        android:text="@string/cancel_btn" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_return"
+        android:id="@+id/btn_save_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:text="@string/return_btn" />
+        android:text="@string/save_btn" />
 
 </RelativeLayout>
