--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -22,7 +22,7 @@
         android:padding="10dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_open_tasks"
+        android:id="@+id/btn_add_new_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -31,7 +31,7 @@
         android:text="@string/add_new_task" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_logout"
+        android:id="@+id/btn_return_today_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
